--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "config": "^3.0.1",
     "discord.js": "^11.4.2",
     "dotenv": "^7.0.0",
+    "express": "^4.16.4",
     "node-cron": "^2.0.3"
   },
   "devDependencies": {
