--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "config": "^3.0.1",
     "discord.js": "^11.4.2",
     "dotenv": "^7.0.0",
