--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "discord.js": "^11.4.2",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
-    "node-cron": "^2.0.3"
+    "node-cron": "^2.0.3",
+    "notevil": "^1.3.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
